<resources>
    <string name="app_name">SSUtudy</string>
    <string name="smart_study_for_u">Smart Study for U</string>
    <string name="login_desc">로그인을 통해\n관심 정보를 기반으로 한\n당신에게 맞춘 스터디를 찾아보세요</string>
    <string name="sign_up_desc">회원가입을 통해\n회원님께 맞는 스터디를 추천할 수 있도록\n회원님의 정보를 저희에게 알려주세요</string>
    <string name="ssutudy_with">SSUtudy With</string>
    <string name="student_id">학번</string>
    <string name="input_student_id">8자리 학번을 입력하세요.</string>
    <string name="pw">Password</string>
    <string name="input_pw">비밀번호를 입력하세요.</string>
    <string name="input_pw_hint">비밀번호를 입력하세요.(8자리 이상 15자리 이하)</string>
    <string name="login">로그인</string>
    <string name="not_yet_sign_up">아직 회원이 아니신가요?</string>
    <string name="sign_up">가입하기</string>
    <string name="name">이름</string>
    <string name="input_name">실명을 입력해주세요.</string>
    <string name="password_check">Password 확인</string>
    <string name="input_password_check">비밀번호를 재입력하세요.</string>
    <string name="next">다음</string>
    <string name="grade">학년</string>
    <string name="major">학과</string>
    <string name="input_major">학과를 입력하세요</string>
    <string name="category_of_interest">관심 카테고리</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="least_three_categories">* 최소 3개의 카테고리를 설정해주세요</string>
    <string name="my_page">My Page</string>
    <string name="my_info">내 정보</string>
    <string name="grade_first">1학년</string>
    <string name="major_software">소프트웨어학부</string>
    <string name="category_example">알고리즘 외 2</string>
    <string name="version_1_0_0">1.0.0</string>
    <string name="withdrawal_from_membership">회원탈퇴</string>
    <string name="contact">문의하기</string>
    <string name="open_source">오픈소스 고지</string>
    <string name="version">버전 정보</string>
    <string name="logout">로그아웃</string>
    <string name="recommendation_ssutudy">추천 SSUtudy</string>
    <string name="create_ssutudy">스터디\n개설하기</string>
    <string name="create_ssutudy_title">스터디 개설하기</string>
    <string name="detail_ssutudy_title">스터디 상세보기</string>
    <string name="subject">과목</string>
    <string name="topic">주제</string>
    <string name="intro_curri_culum">소개 (커리큘럼 등)</string>
    <string name="choose_category">카테고리 선택 (3~5개)</string>
    <string name="max_participants">최대 참여 인원</string>
    <string name="input">입력하기</string>
    <string name="input_topic">스터디의 주제를 입력해주세요.</string>
    <string name="current_max_participants">%s명 / 최대 %s명</string>
    <string name="recommendation_study_desc">설정한 관심 학과에서 개설된 SSUtudy를 추천해드려요.</string>
    <string name="input_intro">스터디에 대해 자유롭게 소개해주세요.</string>
    <string name="open_chat">오픈채팅 링크</string>

    <string-array name="spinner_grade">
        <item>1학년</item>
        <item>2학년</item>
        <item>3학년</item>
        <item>4학년</item>
    </string-array>
    <string-array name="spinner_major">
        <item>컴퓨터학부</item>
        <item>소프트웨어학부</item>
        <item>AI융합학부</item>
        <item>글로벌미디어학부</item>
        <item>미디어경영</item>
    </string-array>
    <string-array name="spinner_ssutudy_recommendation">
        <item>추천순</item>
        <item>최신순</item>
    </string-array>
    <string-array name="spinner_create_college">
        <item>IT대학</item>
    </string-array>
    <string-array name="spinner_create_participants">
        <item>3 명</item>
        <item>4 명</item>
        <item>5 명</item>
        <item>6 명</item>
        <item>7 명</item>
        <item>8 명</item>
    </string-array>
    <string-array name="ssutudy_category">
        <item>JAVA</item>
        <item>Python</item>
        <item>네트워크</item>
        <item>알고리즘</item>
        <item>컴퓨터구조</item>
        <item>인공지능</item>
        <item>데이터베이스</item>
        <item>머신러닝</item>
        <item>CS</item>
        <item>백엔드</item>
        <item>프론트엔드</item>
        <item>UIUX</item>
        <item>클라이언트</item>
        <item>게임</item>
        <item>디자인패턴</item>
        <item>클린코드</item>
        <item>사이드프로젝트</item>
        <item>공모전</item>
        <item>해커톤</item>
        <item>기타</item>
    </string-array>

    <string-array name="ssutudy_category_test">
        <item>알고리즘</item>
        <item>운영체제</item>
        <item>자료구조</item>
        <item>데이터베이스</item>
        <item>시스템</item>
    </string-array>

    <string-array name="subject_list">
        <item>(전선)두드림Ⅲ-3</item>
        <item>시스템프로그래밍(나) (대면+사전녹화)</item>
        <item>인공지능(나) (대면+사전녹화)</item>
        <item>소프트웨어프로젝트(나) (대면)</item>
        <item>(전선)두드림Ⅰ-3</item>
        <item>확률및통계(공통-재수강) (대면)</item>
        <item>소프트웨어프로젝트(가) (대면)</item>
        <item>해외장기현장실습(6)</item>
        <item>네트워크프로그래밍(나) (대면+사전녹화)</item>
        <item>
        확률및통계(가) (대면)</item>
        <item>
        데이터베이스(다) (대면+사전녹화)</item>
        <item>
        물리1및실험(다) (대면)</item>
        <item>
        확률및통계(나) (대면)</item>
        <item>
        오픈소스기반고급설계 (대면) (Engaged Learning)</item>
        <item>
        자료구조(다) (대면)</item>
        <item>
        객체지향프로그래밍및실습(나) (대면)</item>
        <item>
        전공심화전문가양성교육(3)</item>
        <item>
        데이터베이스(가) (대면+사전녹화)</item>
        <item>
        소프트웨어공학 (대면)</item>
        <item>
        프로그래밍기초및실습(공통-재수강) (대면)</item>
        <item>
        물리1및실험(라) (대면)</item>
        <item>
        컴퓨터>구조(공통-재수강) (대면)</item>
        <item>
        리눅스시스템관리(나) (대면)</item>
        <item>해외장기현장실습(3)</item>
        <item>
        SW융합세미나1 (대면)</item>
        <item>
        캡스톤디자인종합프로젝트2(나) (대면)</item>
        <item>
        빅데이터분석(나) (대면)</item>
        <item>
        객체지향프로그래밍및실습(다) (대면)</item>
        <item>
        자료구조(공통-재수강) (대면)</item>
        <item>
        선형대수(나) (대면)</item>
        <item>
        네트워크프로그래밍(가) (대면+사전녹화)</item>
        <item>
        프로그래밍언어(나) (대면)</item>
        <item>
        물리1및실험(가) (대면)</item>
        <item>
        프로그래밍기초및실습(다) (대면)</item>
        <item>
        컴퓨터비전 (대면)</item>
        <item>
        자료구조(나) (대면)</item>
        <item>
        (전선)두드림Ⅱ-6</item>
        <item>
        컴퓨터구조(나) (대면)</item>
        <item>
        리눅스시스템관리(공통-재수강) (대면)</item>
        <item>
        컴퓨터구조(다) (대면)</item>
        <item>
        컴퓨터구조(가) (대면)</item>
        <item>
        소프트웨어특강1 (대면)</item>
        <item>프로그래밍기초및실습(가) (대면)</item>
        <item>프로그래밍기초및실습(나) (대면)</item>
        <item>시스템보안(나) (대면)</item>
        <item>시스템보안(가) (대면)</item>
        <item>컴파일러 (대면)</item>
        <item>객체지향프로그래밍및실습(가) (대면)</item>
        <item>캡스톤디자인종합프로젝트2(가) (대면)</item>
        <item>데이터베이스(나) (대면+사전녹화)</item>
    </string-array>
</resources>