<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.android.ssutudy.presentation.signup.viewmodel.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".presentation.signup.view.SignUpActivity">

            <TextView
                android:id="@+id/tv_sign_up_first_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/smart_study_for_u"
                android:textAppearance="@style/M18" />

            <TextView
                android:id="@+id/tv_sign_up_first_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssutudy_with"
                android:textAppearance="@style/B40" />

            <TextView
                android:id="@+id/tv_sign_up_first_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up_desc"
                android:textAppearance="@style/M14"
                android:textColor="@color/gray_9e9e9e" />

            <TextView
                android:id="@+id/tv_sign_up_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/name"
                android:textAppearance="@style/M16" />

            <EditText
                android:id="@+id/et_sign_up_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_stroke_gray_d5d5d5_1_radius_10"
                android:hint="@string/input_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingVertical="17dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@={vm.name}"
                android:textAppearance="@style/M14"
                android:textColorHint="@color/gray_9e9e9e" />

            <TextView
                android:id="@+id/tv_sign_up_first_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/id"
                android:textAppearance="@style/M16" />

            <EditText
                android:id="@+id/et_sign_up_first_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_stroke_gray_d5d5d5_1_radius_10"
                android:hint="@string/input_id"
                android:inputType="text"
                android:maxLines="1"
                android:paddingVertical="17dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@={vm.id}"
                android:textAppearance="@style/M14"
                android:textColorHint="@color/gray_9e9e9e" />

            <TextView
                android:id="@+id/tv_sign_up_first_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/pw"
                android:textAppearance="@style/M16" />

            <EditText
                android:id="@+id/et_sign_up_first_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_stroke_gray_d5d5d5_1_radius_10"
                android:hint="@string/input_pw"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="17dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@={vm.pw}"
                android:textAppearance="@style/M14"
                android:textColorHint="@color/gray_9e9e9e" />

            <TextView
                android:id="@+id/tv_login_first_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/password_check"
                android:textAppearance="@style/M16" />

            <EditText
                android:id="@+id/et_login_first_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_stroke_gray_d5d5d5_1_radius_10"
                android:hint="@string/input_password_check"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="17dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@={vm.pwCheck}"
                android:textAppearance="@style/M14"
                android:textColorHint="@color/gray_9e9e9e" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rectangle_stroke_gray_d5d5d5_1_radius_10"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>
</layout>