<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.android.ssutudy.presentation.signup.viewmodel.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".presentation.signup.view.SignUpActivity">

            <TextView
                android:id="@+id/tv_sign_up_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/smart_study_for_u"
                android:textAppearance="@style/M18" />

            <TextView
                android:id="@+id/tv_sign_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssutudy_with"
                android:textAppearance="@style/B40" />

            <TextView
                android:id="@+id/tv_sign_up_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up_desc"
                android:textAppearance="@style/M14"
                android:textColor="@color/gray_9e9e9e" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"
                    android:textAppearance="@style/M16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner_login_second_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_spinner_grade"
                    android:paddingStart="15dp"
                    android:paddingEnd="41dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:text="@string/major"
                android:textAppearance="@style/M16" />

            <EditText
                android:id="@+id/et__second_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_stroke_gray_d5d5d5_1_radius_10"
                android:hint="@string/input_major"
                android:inputType="text"
                android:maxLines="1"
                android:paddingVertical="17dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:textAppearance="@style/M14"
                android:textColorHint="@color/gray_9e9e9e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/category_of_interest"
                android:textAppearance="@style/M16" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/layout_sign_up_second_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_stroke_gray_d5d5d5_1_radius_10"
                android:text="@string/sign_up_complete" />

        </LinearLayout>
    </ScrollView>
</layout>